--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <h1>My first webpage</h1>
-    <h2>Written with the guidance of Epicodus</h2>
+    <h2>Written with the guidance of <em>Epicodus</em></h2>
 
-    <p>This is my first webpage!</p>
+    <p>This is my <strong>first webpage</strong>!</p>
     <p>Isn't it nice?</p>
 
     <p>Here are some things I am going to learn about coding</p>
@@ -17,5 +17,7 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
+    <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+    <img src="kitten.jpeg" alt="A photo of a cute kitten.">
   </body>
 </html>
