--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Web page #1!</title>
+    <link rel="stylesheet" href="css/styles.css" type ="text/css">
   </head>
   <body>
     <h1>My first webpage</h1>
