added css and favorite places files

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,7 +1,8 @@
-<!DOCTYE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Michael's favorite things</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>Myfavorite things</h1>
